# download_m3u8

./: 1_batch_get_url.py  2_batch_download_aac.py  pyproject.toml  readme.md
src/: download_m3u8.py  task_m3u8.csv
src/download_m3u8/: __init__.py  cli.py  collector.py  downloader.py  tasks.py
