[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "download-m3u8"
version = "0.1.0"
description = "CLI toolkit for collecting m3u8 URLs and downloading AAC files"
readme = "readme.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "download-m3u8 maintainers"}
]
dependencies = [
    "pandas>=2.1",
    "selenium>=4.21",
    "selenium-wire>=5.1",
    "typer[all]>=0.12",
]

[project.scripts]
"download-m3u8" = "download_m3u8.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
